# CppProjectTemplate

./: .gitmodules  CMakeLists.txt  Makefile  main.cc  my_lib.h  script.sh
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake
configured/: CMakeLists.txt  config.hpp.in
docs/: script.sh
docs/html/: CMakeLists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h__incl.map  my__lib_8h__incl.md5  my__lib_8h_source.html
docs/html/search/: functions_0.js  functions_1.js  functions_2.js
src/: CMakeLists.txt  my_lib.cc  my_lib.h
test/: CMakeLists.txt  main.cpp
